fix: ajustes no código e documentação Swagger
